--- a/report/citations.bib
+++ b/report/citations.bib
@@ -4,7 +4,7 @@
   year={2007},
 }
 
-@misc{guido_2017,
+@misc{guido2017,
   title={The Smart Fuzzer Revolution},
   url={https://blog.trailofbits.com/2017/02/16/the-smart-fuzzer-revolution/},
   journal={Trail of Bits Blog},
